--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "private": true,
-  "webpackConfigJaid": "universalLib",
+  "webpackConfigJaid": "nodeClass",
   "version": "0.1.0",
   "author": "Jaid <jaid.jsx@gmail.com> (https://github.com/Jaid)",
   "dependencies": {
-    "@babel/runtime": "^7.5.5"
+    "@babel/runtime": "^7.5.5",
+    "emit-promise": "^3.1.0",
+    "epoch-seconds": "^1.2.0",
+    "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
     "acorn": "^6.2.1",
     "babel-jest": "^24.8.0",
     "babel-preset-jaid": "^6.8.2",
     "browserslist-config-jaid-universal": "^2.0.0",
+    "delay": "^4.3.0",
     "eslint": "^6.1.0",
     "eslint-config-jaid": "^1.26.0",
+    "jaid-logger": "^1.4.1",
     "jest": "^24.8.0",
     "rimraf": "^2.6.3",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "webpack": "^4.38.0",
     "webpack-config-jaid": "^5.23.0"
   },
