--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/runtime": "^7.5.5",
     "emit-promise": "^3.1.0",
     "epoch-seconds": "^2.0.1",
+    "lodash": "^4.17.15",
     "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
