--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "@babel/runtime": "^7.6.0",
     "emit-promise": "^3.1.0",
-    "epoch-seconds": "^2.0.2",
     "lodash": "^4.17.15",
+    "readable-ms": "^1.0.0",
     "socketio-wildcard": "^2.0.0"
   },
   "devDependencies": {
