--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "test:debug": "DEBUG=\"$DEBUG,$(basename $PWD),$(basename $PWD):*\" NODE_ENV=test node --inspect=9229 node_modules/jest/bin/jest.js --runInBand",
     "prepareActionJest": "npm run build:prod"
   },
-  "name": "socket-enhance"
+  "name": "socket-enhance",
+  "description": "Adds utility functions to socket.io instance objects."
 }
